plugins {
    id "java"
}

group = 'net.mcreator.demojavaplugin'
version = '1.0'

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

configurations {
    implementation.extendsFrom export
}

tasks.jar {
    archiveFileName.set("demo-plugin.zip")
    // ensure that name is right
    rename { String fileName ->
        fileName == "texts_en_US.properties" ? "texts.properties" : fileName
    }
}

tasks.register('exportToMyMCreator', Copy) {
    dependsOn jar
    from("build/libs/demo-plugin.zip")
    destinationDir(new File(getUserFolder(), "plugins/"))
    rename { String fileName ->
        fileName == "demo-plugin.zip" ? "demo-plugin" + UUID.randomUUID() + ".zip" : fileName
    }
    doLast {
        println("You can restart your mcreator with folder: " + destinationDir)
    }
}

tasks.register('runMCreatorWithPlugin', JavaExec) {
    dependsOn jar

    environment("MCREATOR_HOME", file("./run"))
    environment("MCREATOR_PLUGINS_FOLDER", file("./build/libs"))

    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    classpath = sourceSets.main.runtimeClasspath

    mainClass = 'net.mcreator.Launcher'

    workingDir = file("./run")
}

private static File getUserFolder() {
    if (System.getenv("MCREATOR_HOME") != null) {
        return new File(System.getenv("MCREATOR_HOME"))
    }

    return new File(System.getProperty("user.home") + "/.mcreator/")
}

apply from: 'mcreator.gradle'